# af

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PROGRESS.md  README.md  TODO.md  clippy.toml  deny.toml  go.mod  go.sum  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.zed/: settings.json
book/: book.toml
book/src/: introduction.md
cmd/af/: agent.go  auth.go  auth_test.go  clean.go  clean_test.go  completion_sources.go  completions.go  completions_test.go  config.go  config_test.go  control.go  control_test.go  create.go  create_test.go  doctor.go  doctor_smoke.go  doctor_smoke_test.go  doctor_test.go  done.go  exit_codes.go  exit_codes_test.go  info.go  info_test.go  jsonio.go  list.go  list_info_test.go  main.go  main_test.go  note.go  note_test.go  obsidian_warning_test.go  operational_ux_test.go  pr_refresh_cache.go  pr_refresh_lock_window_test.go  pr_refresh_stale_test.go  pr_refresh_wire_test.go  proxy_commands.go  proxy_commands_test.go  pull.go  pull_test.go  (+27 more)
docs/: CONVENTIONS.md  DECISION_SKETCHES.md  EXAMPLES.md  GAP_ANALYSIS.md  PLAN.md  PRE_RELEASE_SMOKE.md  SPEC.md
docs/adr/: 001-agent-provider.md  006-session-metadata.md  008-phased-delivery.md  009-provisioning.md  010-platform-deps.md  011-workstream-lifecycle.md  016-secret-storage.md  017-remote-resume.md  018-external-tool-testing.md  023-sandbox-agent-layer-conflict.md  024-remote-sandbox-daemon-url.md  029-external-tool-testing-addendum.md  031-v1-go-rewrite-and-scope-reduction.md  032-adr-conventions.md  033-documentation-archival-policy.md  034-go-module-layout.md  035-cli-framework-cobra.md  036-configuration-toml-layered.md  037-session-metadata-schema.md  038-workstream-and-worktree-layout.md  039-multi-agent-multi-session.md  040-tmux-only-multiplexer.md  041-ssh-remote-model.md  042-sandbox-providers-slicer-sbx.md  043-agent-providers.md  044-doctor-and-install-hints.md  045-af-setup.md  046-af-suspend-resume-lifecycle.md  047-obsidian-integration.md  048-minimal-proxy-commands.md  049-secret-management.md  050-code-quality-golangci-lint-pedantic.md  051-testing-strategy.md  052-formal-verification.md  053-build-and-release-goreleaser-make.md  054-af-status-dashboard.md  055-af-info-detail.md  056-af-clean-reaper.md  057-af-pr-ai-body.md  058-af-retro-mining.md  (+18 more)
docs/planning/: HANDOFF.md  adr-drafts.md  gap-analysis.md
docs/v0/: CONVENTIONS.md  README.md  SPEC.md  TODO.md
examples/: README.md
examples/obsidian/: README.md
internal/agent/: agent.go  agent_extra_test.go  agent_internal_test.go  agent_test.go  doc.go  fake.go
internal/config/: config.go  config_test.go  control_test.go  doc.go  render.go  render_test.go  template.go  template_test.go
internal/control/: control.go  control_test.go
internal/diff/: diff.go  diff_exec_test.go  diff_test.go
internal/doccheck/: adr_index_test.go
internal/doctor/: doc.go  doctor.go  doctor_test.go  remote.go  (+4 more)
scripts/: book-gen.sh  coverage-check.sh
src/: cli.rs  lib.rs  main.rs
tests/: agent_sandbox.rs  auth_cli.rs  cli_test.rs  editor_remote.rs  provider_remote.rs  sandbox_remote_daemon.rs
(+276 files in other folders)
