[package]
name = "af"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "af — agentic-flow, automatic-flow, or as-fuck. Workflow tooling for agentic/automatic programming."
repository = "https://github.com/kakkoyun/af"
homepage = "https://github.com/kakkoyun/af"
authors = ["Kemal Akkoyun <kakkoyun@gmail.com>"]
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "workflow", "agentic", "automation"]

[[bin]]
name = "af"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
uuid = { version = "1", features = ["v5"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# ── Lint configuration ─────────────────────────────────────────────────────────
# Modeled after astral-sh/ruff and astral-sh/uv
[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"

[lints.clippy]
# Enable pedantic as baseline (warn, not deny, so you can iterate)
pedantic = { level = "warn", priority = -2 }

# ── Pedantic lints we intentionally allow ──────────────────────────────────────
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# These fire too often and reduce readability more than they help:
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
if_not_else = "allow"
# Diagnostics not actionable until clippy#13774 is resolved:
large_stack_arrays = "allow"

# ── Restriction lints (opt-in, high-value) ─────────────────────────────────────
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
# tests_outside_test_module fires on integration tests in tests/ which is standard Rust convention.
# Re-enable once https://github.com/rust-lang/rust-clippy/issues/11024 is resolved.
tests_outside_test_module = "allow"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unneeded_field_pattern = "warn"
use_self = "warn"
verbose_file_reads = "warn"

# ── Nursery lints (experimental, high-value) ───────────────────────────────────
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"

# ── Release profile ───────────────────────────────────────────────────────────
[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

[profile.dev]
# Slightly faster dev builds
opt-level = 0
debug = "full"
